# Heat_Grid_Agent

./: .env.example  .gitattributes  .gitignore  01_에이전트_기반구조_작업보고서.md  02_검증_GitHub_보고서.md  AGENTS.md  AGENT_HANDOFF_KO.md  DESIGN.md  Dockerfile.backend  FROZEN_WORK.md  GETTING_STARTED.md  HANDOFF.md  M1_SCOPE.md  M1_SPECIALIST_HANDOFF_KO.md  MODEL_INVENTORY_KO.md  PACKAGE_MANIFEST.md  PACKAGE_README_KO.md  PROJECT_LEGACY_AND_WORK_PROCESS_REPORT.md  README.md  docker-compose.override.yml  docker-compose.yml  import_replay_dataset.ps1  main.py  pyproject.toml  restore_database.ps1  start-local.ps1  실행가이드.md
00_작업규칙/: 01_git_규칙.md  02_보고서_규칙.md
01_프로젝트개요/: 01_HeatGridAgent_프로젝트개요.md
02_전략_기획/: 00_시뮬레이션_방향성_계획.md  01_HeatGridAgent_디벨롭_메모.md  README.md
04_최종모델/: README.md
05_시뮬레이션/: 01_시뮬레이션_개요.md  VERSIONING.md
06_보고서/: 01_작업환경_구성_보고서.md  README.md
PREPROCESSING/: 00_load_dataset.ipynb
agent/: __init__.py
claude_output/: 01_구성도_M1_specialist_패키지.md  02_흐름도_M1_specialist_파이프라인.md  03_실행계획도_M1_specialist_런북.md
compare/: README.md  agent_cycle_observations_20260721.csv  generate_m1_performance_comparison_notebook.py  generate_ml_ops_agent_validation_notebook.py  generate_threshold_weight_rationale_notebook.py  m1_specialist_performance_comparison.ipynb  m1_threshold_weight_rationale_report.ipynb  ml_ops_agent_validation_ko.ipynb  ppt_model_evaluation_detailed_ko.md
data/: README.md
diary/: 2026-06-23_ml_preprocessing_diary.md  2026-06-24_ml_04_05_diary.md  2026-06-24_ml_06_audit_diary.md  2026-06-24_ml_06_diary.md  2026-06-24_ml_06_resume_handoff.md  2026-06-26_ml_report_checkpoint.md  2026-06-26_priority_model_comparison_diary.md  repository_migration_commit_history.md  total_input.md
docs/: 00_SOURCE_TRACE.md  01_PIPELINE_STEPS.md  02_AGENT_OUTPUT_CONTRACT.md  03_MODEL_DESIGN.md  04_VALIDATION_AND_ABLATION.md  05_RUNBOOK.md  06_FINAL_RESULTS.md  07_HANDOFF_FILE_INDEX.md  08_MODEL_REPORT_DEFENSE_AUDIT.md  09_CODEX_MODEL_REPORT_REVIEW_PROMPT.md  10_SPATIAL_EXTERNAL_DATA_DB_PLAN.md  11_SERVICE_RAG_LOGGING_AND_CONTEXT.md  12_AGENT_RAG_CURRENT_HANDOFF.md  13_BACKEND_V3_RAG_UPLOAD_PREP.md  13_RAG_DB_DOCUMENT_POLICY.md  14_AGENT_RECURSIVE_AUTOMATION.md  15_AGENT_FOUNDATION_HARDENING.md  15_PRIORITY_EVALUATION_SNAPSHOT.md  16_SIMULATION_VERSIONS.md  FINAL_TEST_DEMO.md  HeatGrid_LangGraph_구조도.excalidraw.json  README.md  REPLAY_RUNBOOK.md  (+1 more)
frontend/: .env.example  (+10 more)
inference_handoff/heatgrid_inference_package_2026-06-26/: PACKAGE_MANIFEST.json  README.md  pyproject.toml  run_inference.py
inference_handoff/heatgrid_inference_package_2026-06-26/contracts/: categorical_feature_map.csv  metadata_columns.csv
inference_handoff/heatgrid_inference_package_2026-06-26/docs/: inference_flow.md  retraining_scope.md
inference_handoff/heatgrid_inference_package_2026-06-26/examples/: README.md
inference_handoff/heatgrid_inference_package_2026-06-26/models/anomaly/: anomaly_baseline_thresholds.csv  baseline_model_metadata.json
inference_handoff/heatgrid_inference_package_2026-06-26/models/priority/: priority_engine_tuned_metadata.json
inference_handoff/heatgrid_inference_package_2026-06-26/models/risk/: lightgbm_risk_model.joblib  risk_model_metadata.json
inference_handoff/heatgrid_inference_package_2026-06-26/src/heatgrid_inference/: __init__.py  cli.py  constants.py  feature_engineering.py  scoring.py
(+1419 files in other folders)
