[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "third-model"
version = "0.1.0"
description = "HeatGrid third-model operational pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "joblib",
    "lightgbm",
    "nbclient",
    "nbformat",
    "ipykernel",
    "numpy",
    "pandas",
    "plotly",
    "scikit-learn",
    "tabulate",
]

[project.scripts]
third-model-pipeline = "third_model.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
