[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "third-model"
version = "0.1.0"
description = "HeatGrid third-model operational pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "joblib",
    "lightgbm",
    "nbclient",
    "nbformat",
    "ipykernel",
    "numpy",
    "pandas",
    "plotly",
    "psycopg[binary]",
    "scikit-learn",
    "tabulate",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.2",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "openai>=2.44.0",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "langgraph-checkpoint-postgres==3.1.0",
]

[project.scripts]
third-model-pipeline = "third_model.pipeline:main"
heatgrid-db-migrate = "heatgrid_ops.db.cli:main"
heatgrid-replay-worker = "simulator.versions.v2_postgres_react_ops.backend.replay_worker_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["v0_ops_handoff_package/report_generator_hsj/report_generator/src"]

[dependency-groups]
dev = [
    "basedpyright==1.39.9",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff==0.15.21",
]
