[project]
name = "heatgrid-inference-handoff"
version = "0.1.0"
description = "HeatGrid model inference handoff package"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.0",
    "lightgbm>=4.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
